prevent wrapping

--- a/static/css/viani.css
+++ b/static/css/viani.css
@@ -19,6 +19,10 @@
     margin: .2rem;
 }
 
+table td {
+    white-space: nowrap;;
+}
+
 .login-form {
     max-width:350px;
     margin:auto;
